--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ display: inline-flex;
 
 }
 .menu ul li a{
-background: linear-gradient(yellowgreen,#EDF2D3);
+background: linear-gradientaqua,#EDF2D3);
 color: white;
 text-decoration: none;
 margin: auto;
